ostep-projects/initial-utilities/wzip/lint.log
94 warnings generated.
wzip.c:108:13: error: Value stored to 'succ' is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
            succ = printToken(t);
            ^
wzip.c:108:13: note: Value stored to 'succ' is never read
wzip.c:143:17: error: Value stored to 'succ' is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
                succ = printToken(t);
                ^
wzip.c:143:17: note: Value stored to 'succ' is never read
/home/adam/Code/sysprg/ostep-projects/initial-utilities/wzip/wzip.c:167:30: error: use 'fopen' mode 'e' to set O_CLOEXEC [android-cloexec-fopen,-warnings-as-errors]
        fp = fopen(files[i], "r");
                             ^~~~
                             "re"
/home/adam/Code/sysprg/ostep-projects/initial-utilities/wzip/wzip.c:177:13: error: Value stored to 'succ' is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
            succ = printToken(curtok);
            ^
/home/adam/Code/sysprg/ostep-projects/initial-utilities/wzip/wzip.c:177:13: note: Value stored to 'succ' is never read
Suppressed 90 warnings (90 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
4 warnings treated as errors
